--- a/public/modules/core/css/core.scss
+++ b/public/modules/core/css/core.scss
@@ -1234,6 +1234,10 @@ a {
   padding: 12px 10px;
 }
 
+.filters li, .nav-tabs li {
+  cursor: pointer;
+}
+
 @media (min-width: 768px) { 
   #nav-search-field { width: 320px; }
   .navbar-form { width: 360px; }
