--- a/public/modules/messages/views/list-messages.client.view.html
+++ b/public/modules/messages/views/list-messages.client.view.html
@@ -4,8 +4,10 @@
       <div data-ng-include="'modules/messages/views/filters.partial.html'"></div>
     </div>
     <div class="col-md-8">
-      <div data-ng-repeat="msg in messages" data-ng-include="'modules/messages/views/message.partial.html'"></div>
-      <div us-spinner data-ng-if="!messages.$resolved"></div>
+      <div infinite-scroll="find()" infinite-scroll-distance="2" infinite-scroll-disabled="!messages.$resolved || messages.finished">
+        <div data-ng-repeat="msg in messages" data-ng-include="'modules/messages/views/message.partial.html'"></div>
+      </div>
+      <div us-spinner data-ng-if="!messages.$resolved" style="position:relative;padding:20px"></div>
       <div class="alert alert-info text-center" data-ng-hide="!messages.$resolved || messages.length">
         No messages to show
       </div>
