--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -15,5 +15,8 @@
 		<a href="/auth/github" class="undecorated-link">
 			<img src="/modules/users/img/buttons/github.png">
 		</a>
+		<a href="" data-ng-click="navigator.id.request()" class="undecorated-link">
+			<img src="/modules/users/img/buttons/github.png">
+		</a>
 	</div>
 </section>
